--- a/index.html
+++ b/index.html
@@ -52,13 +52,22 @@
     </div>
     <div class="panel buttons">
       <template v-if="running">
-        <button class="btn attack">
+        <button 
+          class="btn attack"
+          @click="attack()"
+        >
           Ataque
         </button>
-        <button class="btn special-attack">
+        <button 
+          class="btn special-attack"
+          @click="attack(true)"
+        >
           Ataque Especial
         </button>
-        <button class="btn heal">
+        <button 
+          class="btn heal"
+          @click="healAndHurt()"
+        >
           Curar
         </button>
         <button class="btn give-up" @click="running = false">
